--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "element-plus": "^1.0.2-beta.28",
     "vue": "^3.0.5",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vue3-markdown-it": "^1.0.7"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.0.4",
