--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "element-plus": "^1.0.2-beta.28",
     "vue": "^3.0.5",
     "vue-router": "^4.0.3",
-    "vue3-markdown-it": "^1.0.7"
+    "vue3-markdown-it": "^1.0.7",
+    "vuex": "^4.0.0-rc.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.0.4",
