--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
-  "name": "lessons",
+  "name": "lessons2",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build"
   },
   "dependencies": {
-    "axios": "^0.21.1",
+    "@rollup/plugin-yaml": "^3.0.0",
+    "bezier-easing": "^2.1.0",
+    "diff-match-patch": "^1.0.5",
     "element-plus": "^1.0.2-beta.28",
+    "js-yaml": "^4.1.0",
+    "lovue": "^3.1.3",
+    "markdown-it-emoji": "^2.0.0",
+    "markdown-it-pandoc-renderer": "^1.1.3",
+    "mitt": "^2.1.0",
+    "postcss": "^8.2.13",
+    "prismjs": "^1.23.0",
+    "stackedit-js": "^1.0.7",
     "vue": "^3.0.5",
     "vue-phone-number-input": "^1.1.10",
     "vue-router": "^4.0.3",
@@ -17,6 +27,21 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.0.4",
     "@vue/compiler-sfc": "^3.0.5",
-    "vite": "^2.0.0-beta.64"
+    "autoprefixer": "^10.2.5",
+    "axios": "^0.21.1",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
+    "stackedit-js": "^1.0.7",
+    "vite": "^2.0.3"
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
+  "babel": {
+    "presets": [
+      "@vue/app"
+    ]
   }
 }
